--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Balubaid Group of Companies</title>
+    <link
+  href='http://fonts.googleapis.com/css?family=Cantora+One|Ropa+Sans:400,400italic'
+  rel='stylesheet'
+  type='text/css'
+>
   </head>
   <body>
     <noscript>
